[package]
name = "seahash-groove"
version = "0.1.0"
edition = "2018"

[lib]
name = "groove"
path = "src/lib.rs"

[[bin]]
name = "groovebin"
path = "src/main.rs"

[dependencies]
hash_hasher = "2.0.3"
seahash = "4.1.0"

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "time"
harness = false
test = true
